V1.16.1 (#329)
* Update to build 1.16.1

* #299 - Allowed Values for Attributes not being validated on optional attributes whenever request doesn't also include changes to required attributes

* #308 - PUT /document/:documentId/attributes fail on required attribute

* Added checksum, checksumType, contentType to GET /documents/:id/fulltext

* #310 - Adding document that fails SiteSchema required attribute validation creates folder

* #306 - Add limit and next token for pagination to GET /webhooks

* #307 - Add limit and next token for pagination to GET /sites/:siteId/apiKeys

* #313 - Add configurable RetentionInDays to AWS::Logs::LogGroup

* #312 - Add INFO / DEBUG / WARN log levels at the CloudFormation level

* #314 - Sns Event Application/Json exceeds SNS allowed message size

* #304 - Enable folders and subfolders in staging documents bucket

* #315 - Header value cannot be represented using ISO-8859-1

* #303 - Attempted rename of a document when path already exists

* #318 - Add OCR configuration to /sites/{siteId}/configuration

* Added TABLES to OutputType GET /documents/{id}/ocr

* #321 - Enable Mapping Attributes withoutSource

* #323 - GET /documents/{documentId}/content return error if content type mismatch file type

* Upload Console to v3.7.3